--- a/fee_calculator/apps/calculator/fixtures/advocatetype.yaml
+++ b/fee_calculator/apps/calculator/fixtures/advocatetype.yaml
@@ -1,18 +1,12 @@
 - model: calculator.advocatetype
-  pk: 1
-  fields: {name: QC alone}
+  pk: JRALONE
+  fields: {name: Junior Alone}
 - model: calculator.advocatetype
-  pk: 2
-  fields: {name: Leading QC}
+  pk: LEADJR
+  fields: {name: Leading Junior}
 - model: calculator.advocatetype
-  pk: 3
-  fields: {name: Leading junior}
+  pk: LEDJR
+  fields: {name: Led Junior}
 - model: calculator.advocatetype
-  pk: 4
-  fields: {name: Junior led by QC}
-- model: calculator.advocatetype
-  pk: 5
-  fields: {name: Junior led by junior}
-- model: calculator.advocatetype
-  pk: 6
-  fields: {name: Junior alone}
+  pk: QC
+  fields: {name: QC}
