--- a/fee_calculator/apps/calculator/fixtures/feetype.yaml
+++ b/fee_calculator/apps/calculator/fixtures/feetype.yaml
@@ -1,172 +1,306 @@
 - model: calculator.feetype
   pk: 1
-  fields: {name: Abuse of process hearing (full day), code: APW, is_basic: false}
+  fields: {name: Redeterminations, code: AGFS_REDET, is_basic: false}
 - model: calculator.feetype
   pk: 2
-  fields: {name: Abuse of process hearing (full day) uplift, code: AWU, is_basic: false}
+  fields: {name: Plea and Case management Hearing, code: AGFS_PLEA, is_basic: false}
 - model: calculator.feetype
   pk: 3
-  fields: {name: Abuse of process hearing (half day), code: APH, is_basic: false}
+  fields: {name: Abuse of Process Hearing (Half Day), code: AGFS_ABS_PRC_HF, is_basic: false}
 - model: calculator.feetype
   pk: 4
-  fields: {name: Abuse of process hearing (half day) uplift, code: AHU, is_basic: false}
+  fields: {name: Abuse of Process Hearing (Full Day), code: AGFS_ABS_PRC_WL, is_basic: false}
 - model: calculator.feetype
   pk: 5
-  fields: {name: Additional case, code: NOC, is_basic: false}
+  fields: {name: Adjourned Appeals, code: AGFS_ADJOURNED, is_basic: false}
 - model: calculator.feetype
   pk: 6
-  fields: {name: Additional defendant, code: NDR, is_basic: false}
+  fields: {name: Appeals to Crown Court Against Conviction, code: AGFS_APPEAL_CON,
+    is_basic: false}
 - model: calculator.feetype
   pk: 7
-  fields: {name: Appeals to the Crown Court against conviction, code: ACV, is_basic: false}
+  fields: {name: Appeals to the Crown Court against sentence, code: AGFS_APPEAL_SEN,
+    is_basic: false}
 - model: calculator.feetype
   pk: 8
-  fields: {name: Appeals to the Crown Court against conviction uplift, code: ACU,
+  fields: {name: Application to dismiss a charge day 2 onwards (Half Day), code: AGFS_DMS_DY2_HF,
     is_basic: false}
 - model: calculator.feetype
   pk: 9
-  fields: {name: 'Appeals to the Crown Court against sentence ', code: ASE, is_basic: false}
+  fields: {name: Application to dismiss a charge day 2 onwards (Full Day), code: AGFS_DMS_DY2_WL,
+    is_basic: false}
 - model: calculator.feetype
   pk: 10
-  fields: {name: Appeals to the Crown Court against sentence  uplift, code: ASU, is_basic: false}
+  fields: {name: Committal for Sentence Hearing, code: AGFS_COMMITTAL, is_basic: false}
 - model: calculator.feetype
   pk: 11
-  fields: {name: Basic fee, code: BAF, is_basic: true}
+  fields: {name: Conferences and Views (hours), code: AGFS_CONFERENCE, is_basic: false}
 - model: calculator.feetype
   pk: 12
-  fields: {name: Case discontinued before papers served, code: CCD, is_basic: false}
+  fields: {name: Contempt Hearings, code: AGFS_CONTEMPT, is_basic: false}
 - model: calculator.feetype
   pk: 13
-  fields: {name: Case discontinued before papers served uplift, code: CDU, is_basic: false}
+  fields: {name: Contempt Hearings (Apportioned), code: AGFS_CNTMPT_APP, is_basic: false}
 - model: calculator.feetype
   pk: 14
-  fields: {name: Case fee, code: BAF, is_basic: true}
+  fields: {name: Deferred Sentence Hearings, code: AGFS_DEF_SEN_HR, is_basic: false}
 - model: calculator.feetype
   pk: 15
-  fields: {name: Committal for sentence, code: CSE, is_basic: false}
+  fields: {name: Hearings relating to admissibility of evidence (Full Day), code: AGFS_ADM_EVD_WL,
+    is_basic: false}
 - model: calculator.feetype
   pk: 16
-  fields: {name: Committal for sentence uplift, code: CSU, is_basic: false}
+  fields: {name: Hearings relating to Disclosure (Half Day), code: AGFS_DISC_HALF,
+    is_basic: false}
 - model: calculator.feetype
   pk: 17
-  fields: {name: Conferences and views (total of all hours), code: CAV, is_basic: false}
+  fields: {name: Hearings relating to Disclosure (Full Day), code: AGFS_DISC_FULL,
+    is_basic: false}
 - model: calculator.feetype
   pk: 18
-  fields: {name: Confiscation hearings (full day), code: DTW, is_basic: false}
+  fields: {name: Noting Brief, code: AGFS_NOTING_BRF, is_basic: false}
 - model: calculator.feetype
   pk: 19
-  fields: {name: Confiscation hearings (full day) uplift, code: DWU, is_basic: false}
+  fields: {name: Paper Plea and Case Management, code: AGFS_PAPER_PLEA, is_basic: false}
 - model: calculator.feetype
   pk: 20
-  fields: {name: Confiscation hearings (half day), code: DTH, is_basic: false}
+  fields: {name: Proceeds relating to breach of an order of the Crown Court, code: AGFS_ORDER_BRCH,
+    is_basic: false}
 - model: calculator.feetype
   pk: 21
-  fields: {name: Confiscation hearings (half day) uplift, code: DHU, is_basic: false}
+  fields: {name: Public Interest Immunity hearing (Half Day), code: AGFS_PI_IMMN_HF,
+    is_basic: false}
 - model: calculator.feetype
   pk: 22
-  fields: {name: Contempt -apportioned fee, code: COA, is_basic: false}
+  fields: {name: Public Interest Immunity hearing (Full Day), code: AGFS_PI_IMMN_WL,
+    is_basic: false}
 - model: calculator.feetype
   pk: 23
-  fields: {name: Contempt -unapportioned fee, code: CON, is_basic: false}
+  fields: {name: Research of very unusual or Novel factual issue, code: AGFS_NOVELISSUE,
+    is_basic: false}
 - model: calculator.feetype
   pk: 24
-  fields: {name: Daily attendance fee (days 3 to 40), code: DAF, is_basic: true}
+  fields: {name: Research of very unusual of Novel Point of Law, code: AGFS_NOVEL_LAW,
+    is_basic: false}
 - model: calculator.feetype
   pk: 25
-  fields: {name: Daily attendance fee (days 41-50), code: DAH, is_basic: true}
+  fields: {name: Standard Appearance Fee, code: AGFS_STD_APPRNC, is_basic: false}
 - model: calculator.feetype
   pk: 26
-  fields: {name: Daily attendance fee (days over 50), code: DAJ, is_basic: true}
+  fields: {name: Sentence Hearing, code: AGFS_SENTENCE, is_basic: false}
 - model: calculator.feetype
   pk: 27
-  fields: {name: Deferred sentence hearing, code: DSE, is_basic: false}
+  fields: {name: Special Preperation (Hourly), code: AGFS_SPCL_PREP, is_basic: false}
 - model: calculator.feetype
   pk: 28
-  fields: {name: Deferred sentence hearing uplift, code: DSU, is_basic: false}
+  fields: {name: Trial Not Proceed, code: AGFS_NOT_PRCD, is_basic: false}
 - model: calculator.feetype
   pk: 29
-  fields: {name: Elected cases that crack or plead guilty, code: ECC, is_basic: false}
+  fields: {name: Unsuccesful application to vacate a guilty plea (Half Day), code: AGFS_UN_VAC_HF,
+    is_basic: false}
 - model: calculator.feetype
   pk: 30
-  fields: {name: Evidence uplift per page (pages 1 to 1000), code: EUP, is_basic: true}
+  fields: {name: Unsuccesful application to vacate a guilty plea (Full Day), code: AGFS_UN_VAC_WL,
+    is_basic: false}
 - model: calculator.feetype
   pk: 31
-  fields: {name: Evidence uplift per page (pages in excess of 1000), code: EUQ, is_basic: true}
+  fields: {name: Written / Oral Advice, code: AGFS_WRTN_ORAL, is_basic: false}
 - model: calculator.feetype
   pk: 32
-  fields: {name: Hearings relating to disclosure (half day), code: HDH, is_basic: false}
+  fields: {name: Advocate Fee, code: AGFS_FEE, is_basic: false}
 - model: calculator.feetype
   pk: 33
-  fields: {name: Hearings relating to disclosure (half day) uplift, code: HHU, is_basic: false}
+  fields: {name: Hardship Payment, code: AGFS_HARDSHIP, is_basic: false}
 - model: calculator.feetype
   pk: 34
-  fields: {name: Hearings relating to disclosure full day), code: HDW, is_basic: false}
+  fields: {name: Staged Payments, code: AGFS_STAGED, is_basic: false}
 - model: calculator.feetype
   pk: 35
-  fields: {name: Hearings relating to disclosure full day) uplift, code: HWU, is_basic: false}
+  fields: {name: Other Corrections, code: AGFS_CORRCTNS, is_basic: false}
 - model: calculator.feetype
   pk: 36
-  fields: {name: Hearings relating to the admissibility of evidence (full day), code: AEW,
-    is_basic: false}
+  fields: {name: Conferences & Views - Train, code: AGFS_TCT_TRV_TR, is_basic: false}
 - model: calculator.feetype
   pk: 37
-  fields: {name: Hearings relating to the admissibility of evidence (full day) uplift,
-    code: EWU, is_basic: false}
+  fields: {name: Conferences & Views - Hotel Stay, code: AGFS_TCT_HOT_ST, is_basic: false}
 - model: calculator.feetype
   pk: 38
-  fields: {name: Hearings relating to the admissibility of evidence (half day), code: AEH,
-    is_basic: false}
+  fields: {name: Conferences & Views - Travel Time, code: AGFS_TCT_CNF_VW, is_basic: false}
 - model: calculator.feetype
   pk: 39
-  fields: {name: Hearings relating to the admissibility of evidence (half day) uplift,
-    code: EHU, is_basic: false}
+  fields: {name: Evidence Provision Fee, code: AGFS_EVIDPRVFEE, is_basic: false}
 - model: calculator.feetype
   pk: 40
-  fields: {name: Ineffective trial payment, code: TNP, is_basic: false}
+  fields: {name: Travel & Hotel - Car, code: AGFS_THE_TRV_CR, is_basic: false}
 - model: calculator.feetype
   pk: 41
-  fields: {name: Ineffective trial payment uplift, code: TPU, is_basic: false}
+  fields: {name: Travel & Hotel - Train, code: AGFS_THE_TRV_TR, is_basic: false}
 - model: calculator.feetype
   pk: 42
-  fields: {name: Noting brief, code: NBR, is_basic: false}
+  fields: {name: Travel & Hotel - Hotel Stay, code: AGFS_THE_HOT_ST, is_basic: false}
 - model: calculator.feetype
   pk: 43
-  fields: {name: Number of Prosecution Witnesses, code: NPW, is_basic: true}
+  fields: {name: Travel & Hotel - Conference and View, code: AGFS_THE_CNF_VW, is_basic: false}
 - model: calculator.feetype
   pk: 44
-  fields: {name: Pages of Prosecution Evidence, code: PPE, is_basic: true}
+  fields: {name: Conferences & Views - Car, code: AGFS_TCT_TRV_CR, is_basic: false}
 - model: calculator.feetype
   pk: 45
-  fields: {name: Paper plea and case management hearing, code: PPC, is_basic: false}
+  fields: {name: Evidence Provision Fee, code: EVID_PROV_FEE, is_basic: false}
 - model: calculator.feetype
   pk: 46
-  fields: {name: Paper plea and case management hearing uplift, code: PCU, is_basic: false}
+  fields: {name: Medical Expert, code: MED EXPERT, is_basic: false}
 - model: calculator.feetype
   pk: 47
-  fields: {name: Proceedings relating to breach of an order of the Crown Court, code: CBR,
-    is_basic: false}
+  fields: {name: Translator, code: TRANSLATOR, is_basic: false}
 - model: calculator.feetype
   pk: 48
-  fields: {name: Proceedings relating to breach of an order of the Crown Court uplift,
-    code: CBU, is_basic: false}
+  fields: {name: Financial Expert, code: FIN EXPERT, is_basic: false}
 - model: calculator.feetype
   pk: 49
-  fields: {name: Sentence hearing, code: SHR, is_basic: false}
+  fields: {name: Other, code: OTHER, is_basic: false}
 - model: calculator.feetype
   pk: 50
-  fields: {name: Special preparation, code: SPF, is_basic: false}
+  fields: {name: Travel Costs, code: TRAVEL COSTS, is_basic: false}
 - model: calculator.feetype
   pk: 51
-  fields: {name: Standard appearance, code: SAF, is_basic: false}
+  fields: {name: Cost Judge Application Fee, code: AGFS_CJD_FEE, is_basic: false}
 - model: calculator.feetype
   pk: 52
-  fields: {name: Standard appearance uplift, code: SAU, is_basic: false}
+  fields: {name: Litigator Fee, code: LIT_FEE, is_basic: false}
 - model: calculator.feetype
   pk: 53
-  fields: {name: Travel time, code: TCT, is_basic: false}
+  fields: {name: Accident Reconstruction Report, code: ACCIDENT, is_basic: false}
 - model: calculator.feetype
   pk: 54
-  fields: {name: Wasted preparation, code: WPF, is_basic: false}
+  fields: {name: Warrant - Pages of Prosecuting Evidence, code: WARRANT_PPE, is_basic: false}
 - model: calculator.feetype
   pk: 55
-  fields: {name: Written/oral advice, code: WOA, is_basic: false}
+  fields: {name: Accountants, code: ACCOUNTANTS, is_basic: false}
+- model: calculator.feetype
+  pk: 56
+  fields: {name: Surveyor / Architects, code: SURVEYOR, is_basic: false}
+- model: calculator.feetype
+  pk: 57
+  fields: {name: Computer Experts, code: COMPUTER_EXPERT, is_basic: false}
+- model: calculator.feetype
+  pk: 58
+  fields: {name: Consultant Medical Reports, code: CONSULTANT_REP, is_basic: false}
+- model: calculator.feetype
+  pk: 59
+  fields: {name: DNA Testing, code: DNA_TESTING, is_basic: false}
+- model: calculator.feetype
+  pk: 60
+  fields: {name: Engineer, code: ENGINEER, is_basic: false}
+- model: calculator.feetype
+  pk: 61
+  fields: {name: Enquiry Agents, code: ENQUIRY_AGENTS, is_basic: false}
+- model: calculator.feetype
+  pk: 62
+  fields: {name: Facial Mapping Experts, code: FACIAL_MAPPING, is_basic: false}
+- model: calculator.feetype
+  pk: 63
+  fields: {name: Fingerprint Experts, code: FINGERPRINT, is_basic: false}
+- model: calculator.feetype
+  pk: 64
+  fields: {name: Fire Assessor / Explosives Expert, code: FIRE_EXPLOSIVES, is_basic: false}
+- model: calculator.feetype
+  pk: 65
+  fields: {name: Forensic Scientists, code: FORENSICS, is_basic: false}
+- model: calculator.feetype
+  pk: 66
+  fields: {name: Handwriting Experts, code: HANDWRITING, is_basic: false}
+- model: calculator.feetype
+  pk: 67
+  fields: {name: Interpreters, code: INTERPRETERS, is_basic: false}
+- model: calculator.feetype
+  pk: 68
+  fields: {name: Lip Readers, code: LIP_READERS, is_basic: false}
+- model: calculator.feetype
+  pk: 69
+  fields: {name: Meteorologist, code: METEOROLOGIST, is_basic: false}
+- model: calculator.feetype
+  pk: 70
+  fields: {name: Overnight Expenses, code: OVERNIGHT_EXP, is_basic: false}
+- model: calculator.feetype
+  pk: 71
+  fields: {name: Pathologists, code: PATHOLOGISTS, is_basic: false}
+- model: calculator.feetype
+  pk: 72
+  fields: {name: Photocopying, code: PHOTOCOPYING, is_basic: false}
+- model: calculator.feetype
+  pk: 73
+  fields: {name: Psychiatric Reports, code: PSYCHIATRIC_REP, is_basic: false}
+- model: calculator.feetype
+  pk: 74
+  fields: {name: Psychological Reports, code: PSYCHO_REPORTS, is_basic: false}
+- model: calculator.feetype
+  pk: 75
+  fields: {name: Transcripts, code: TRANSCRIPTS, is_basic: false}
+- model: calculator.feetype
+  pk: 76
+  fields: {name: Vet Report, code: VET_REPORT, is_basic: false}
+- model: calculator.feetype
+  pk: 77
+  fields: {name: Voice Recognition, code: VOICE_RECOG, is_basic: false}
+- model: calculator.feetype
+  pk: 78
+  fields: {name: Special Prep, code: SPECIAL_PREP, is_basic: false}
+- model: calculator.feetype
+  pk: 79
+  fields: {name: Warrant, code: WARRANT, is_basic: false}
+- model: calculator.feetype
+  pk: 80
+  fields: {name: Hardship Payment, code: HARDSHIP, is_basic: false}
+- model: calculator.feetype
+  pk: 81
+  fields: {name: Confiscation (Half Day), code: AGFS_CONFISC_HF, is_basic: false}
+- model: calculator.feetype
+  pk: 82
+  fields: {name: Warrant - Number of Defendants, code: WARRANT_DEFS, is_basic: false}
+- model: calculator.feetype
+  pk: 83
+  fields: {name: Confiscation (Full Day), code: AGFS_CONFISC_WL, is_basic: false}
+- model: calculator.feetype
+  pk: 84
+  fields: {name: Confiscation, code: AGFS_CONFISC, is_basic: false}
+- model: calculator.feetype
+  pk: 85
+  fields: {name: COST Judge Award, code: COST_JUDGE, is_basic: false}
+- model: calculator.feetype
+  pk: 86
+  fields: {name: Other Corrections, code: CORRECTIONS, is_basic: false}
+- model: calculator.feetype
+  pk: 87
+  fields: {name: Advocate Fee (Legacy), code: ADV_FEE, is_basic: false}
+- model: calculator.feetype
+  pk: 88
+  fields: {name: Hearings relating to admissibility of evidence (Half Day), code: AGFS_ADM_EVD_HF,
+    is_basic: false}
+- model: calculator.feetype
+  pk: 89
+  fields: {name: Wasted Preparation Fee, code: AGFS_WSTD_PREP, is_basic: false}
+- model: calculator.feetype
+  pk: 90
+  fields: {name: COST Judge Award, code: AGFS_COST_JUDGE, is_basic: false}
+- model: calculator.feetype
+  pk: 91
+  fields: {name: Warrant - Trial Length, code: WARRANT_TRLLEN, is_basic: false}
+- model: calculator.feetype
+  pk: 92
+  fields: {name: Hardship - Pages of Prosecuting Evidence, code: HARDSHIP_PPE, is_basic: false}
+- model: calculator.feetype
+  pk: 93
+  fields: {name: Hardship - Number of Defendants, code: HARDSHIP_DEFS, is_basic: false}
+- model: calculator.feetype
+  pk: 94
+  fields: {name: Hardship - Trial Length, code: HARDSHIP_TRLLEN, is_basic: false}
+- model: calculator.feetype
+  pk: 95
+  fields: {name: Committal for Trial fee, code: MAGSCOMMITTAL, is_basic: false}
+- model: calculator.feetype
+  pk: 96
+  fields: {name: Adjustment, code: ADJUSTMENT, is_basic: false}
+- model: calculator.feetype
+  pk: 97
+  fields: {name: Cost Judge Preparation Award, code: AGFS_CJD_EXP, is_basic: false}
