--- a/fee_calculator/apps/calculator/fixtures/scenario.yaml
+++ b/fee_calculator/apps/calculator/fixtures/scenario.yaml
@@ -1,32 +1,36 @@
 - model: calculator.scenario
   pk: 1
-  fields:
-    name: Fixed fees
-    fee_types: [7, 8, 9, 10, 12, 13, 15, 16, 22, 23, 29]
+  fields: {name: Discontinuance}
 - model: calculator.scenario
   pk: 2
-  fields:
-    name: Guilty pleas
-    fee_types: [1, 2, 3, 4, 5, 6, 11, 17, 18, 19, 20, 21, 27, 28, 30, 31, 32, 33,
-      34, 35, 36, 37, 38, 39, 40, 41, 42, 45, 46, 47, 48, 50, 51, 52, 53, 54, 55]
+  fields: {name: Guilty Plea}
 - model: calculator.scenario
   pk: 3
-  fields:
-    name: Full trial
-    fee_types: [1, 2, 3, 4, 5, 6, 14, 17, 18, 19, 20, 21, 24, 25, 26, 27, 28, 32,
-      33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 50, 51, 52,
-      53, 54, 55]
+  fields: {name: Cracked Trial}
 - model: calculator.scenario
   pk: 4
-  fields:
-    name: Retrial (within 1 month)
-    fee_types: [1, 2, 3, 4, 5, 6, 14, 17, 18, 19, 20, 21, 24, 25, 26, 27, 28, 32,
-      33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 50, 51, 52,
-      53, 54, 55]
+  fields: {name: Trial}
 - model: calculator.scenario
   pk: 5
-  fields:
-    name: Retrial (after 1 month)
-    fee_types: [1, 2, 3, 4, 5, 6, 14, 17, 18, 19, 20, 21, 24, 25, 26, 27, 28, 32,
-      33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 50, 51, 52,
-      53, 54, 55]
+  fields: {name: Appeal against Conviction}
+- model: calculator.scenario
+  pk: 6
+  fields: {name: Appeal against Sentence}
+- model: calculator.scenario
+  pk: 7
+  fields: {name: Committal for Sentence}
+- model: calculator.scenario
+  pk: 8
+  fields: {name: Contempt}
+- model: calculator.scenario
+  pk: 9
+  fields: {name: Breach of Crown Court Order}
+- model: calculator.scenario
+  pk: 10
+  fields: {name: Cracked before retrial}
+- model: calculator.scenario
+  pk: 11
+  fields: {name: Retrial}
+- model: calculator.scenario
+  pk: 12
+  fields: {name: Elected cases not proceeded}
