Remove third as a distinct concept and replace with separate scenarios
This flag is of relevance only to two scenarios, and its effects seem
like they can be better expressed as separate scenarios. Also only whether
it is the first third or not is relevant.

--- a/fee_calculator/apps/calculator/fixtures/offenceclass.yaml
+++ b/fee_calculator/apps/calculator/fixtures/offenceclass.yaml
@@ -29,7 +29,7 @@
   fields: {name: I, description: Offences against public justice and similar offences}
 - model: calculator.offenceclass
   pk: J
-  fields: {name: J, description: Serious Sexual Offences}
+  fields: {name: J, description: Serious sexual offences}
 - model: calculator.offenceclass
   pk: K
   fields: {name: K, description: Other offences of dishonesty (high value)}
