--- a/fee_calculator/apps/calculator/fixtures/scenario.yaml
+++ b/fee_calculator/apps/calculator/fixtures/scenario.yaml
@@ -1,36 +1,42 @@
 - model: calculator.scenario
   pk: 1
-  fields: {name: Discontinuance, force_third: false}
+  fields: {name: Discontinuance}
 - model: calculator.scenario
   pk: 2
-  fields: {name: Guilty Plea, force_third: false}
+  fields: {name: Guilty plea}
 - model: calculator.scenario
   pk: 3
-  fields: {name: Cracked Trial, force_third: true}
+  fields: {name: Cracked trial (First third)}
 - model: calculator.scenario
   pk: 4
-  fields: {name: Trial, force_third: false}
+  fields: {name: Trial}
 - model: calculator.scenario
   pk: 5
-  fields: {name: Appeal against Conviction, force_third: false}
+  fields: {name: Appeal against conviction}
 - model: calculator.scenario
   pk: 6
-  fields: {name: Appeal against Sentence, force_third: false}
+  fields: {name: Appeal against sentence}
 - model: calculator.scenario
   pk: 7
-  fields: {name: Committal for Sentence, force_third: false}
+  fields: {name: Committal for sentence}
 - model: calculator.scenario
   pk: 8
-  fields: {name: Contempt, force_third: false}
+  fields: {name: Contempt}
 - model: calculator.scenario
   pk: 9
-  fields: {name: Breach of Crown Court Order, force_third: false}
+  fields: {name: Breach of crown court order}
 - model: calculator.scenario
   pk: 10
-  fields: {name: Cracked before retrial, force_third: true}
+  fields: {name: Cracked before retrial (First third)}
 - model: calculator.scenario
   pk: 11
-  fields: {name: Retrial, force_third: false}
+  fields: {name: Retrial}
 - model: calculator.scenario
   pk: 12
-  fields: {name: Elected cases not proceeded, force_third: false}
+  fields: {name: Elected cases not proceeded}
+- model: calculator.scenario
+  pk: 13
+  fields: {name: Cracked trial (After first third)}
+- model: calculator.scenario
+  pk: 14
+  fields: {name: Cracked before retrial (After first third)}
