Add docker config

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,6 +1,19 @@
 [uwsgi]
+procname = uwsgi_%n
+
+vhost = true
+http = :8080
+uid = www-data
+gid = www-data
+chmod-socket = 666
+chown-socket = www-data
+master = true
+enable-threads = true
+processes = 2
+chdir = %d
+virtualenv = %d/venv
 module = fee_calculator.wsgi:application
 static-map = /static=fee_calculator/static
-static-map = /example-client=example_client/build
-static-index = index.html
-route = ^/$ redirect:/api/v1/docs
+post-buffering = 1
+buffer-size = 65535
+http-timeout = 20
