--- a/fee_calculator/apps/calculator/fixtures/unit.yaml
+++ b/fee_calculator/apps/calculator/fixtures/unit.yaml
@@ -22,3 +22,6 @@
 - model: calculator.unit
   pk: PW
   fields: {name: Prosecution Witnesses}
+- model: calculator.unit
+  pk: MONTH
+  fields: {name: Months}
